Fix last column on checkout, they didn't align. Fixes https://github.com/thirtybees/niara/issues/40

--- a/sass/partials/pages/_checkout.scss
+++ b/sass/partials/pages/_checkout.scss
@@ -159,7 +159,9 @@
   text-align: center;
 }
 
-//.delivery_option_price { width: 160px; }
+.delivery_option_price { 
+  width: 20%; 
+}
 
 .carrier_title {
   font-weight: bold;
